--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,59 @@
 @font-face {
+    font-family: 'SBAggroB';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'omyu_pretty';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
+
+.Title{    
+    width: 90%;
+    max-width : 900px;
+    font-family: 'SBAggroB';
+    font-size: 72px;
+    text-align: center;
+    color: rgb(255, 255, 255);    
+    padding: 15px;
+    margin: 5px auto;
+}
+
+.SubTitle{    
+    width: 90%;
+    max-width : 900px;
+    font-family: 'omyu_pretty';
+    font-size: 40px;
+    text-align: center;
+    color: rgb(184, 233, 255);    
+    padding: 15px;
+    margin: 5px auto;
+    line-height: 140%;
+}
+
+.d1{    
+    width: 70%;
+    max-width : 800px;
+    Height: 30px;
+    font-family: 'SBAggroB';
+    border-radius: 25px;
+    font-size: 45px;
+    color: rgb(51, 51, 44);    
+    padding: 30px;
+    margin: 5px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(180, 180, 180);
+    text-align: center;
+    box-shadow: 3px 3px 3px 2px #575757;
+    line-height: 1;
+}
+
 .Note1{    
     width: 70%;
     max-width : 800px;
@@ -23,3 +73,58 @@
     line-height: 1.3;
 }
 
+
+.Note2 {
+    width: 70%;
+    max-width: 800px;
+    font-family: 'omyu_pretty';
+    border-radius: 25px;
+    font-size: 30px;
+    color: rgb(51, 51, 44);    
+    padding: 30px;
+    margin: 25px auto;
+    background-color: rgb(240, 240, 240);
+    text-align: left;
+    box-shadow: 3px 3px 3px 2px #575757;
+    line-height: 1.6;
+}
+
+.Note3{    
+    width: 70%;
+    max-width : 800px;
+    font-family: 'omyu_pretty';
+    border-radius: 25px;
+    font-size: 35px;
+    color: rgb(51, 51, 44);    
+    padding-left: 30;
+    padding-right: 30;
+    padding-top: 10;
+    padding-bottom: 10;
+    margin: 25px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(240, 240, 240);
+    cursor : pointer;
+    text-align: center;
+    box-shadow: 3px 3px 3px 2px #575757;
+    line-height: 1.3;
+}
+
+.mb{
+    margin-bottom: 15px;
+}
+
+.brackets {
+    font-size: 35px;
+    font-weight: bold;
+    display: inline-block;
+}
+
+ul {
+    margin: 0;
+}
+
+ol {
+    margin: 0;
+}
