--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+    color-scheme: light only;
+  }
+  
 @font-face {
     font-family: 'SBAggroB';
     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
